Pushing rough start on 1.15.1 upgrade

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,12 @@ dependencies {
 
     compile group: 'com.amazonaws', name: 'aws-java-sdk-opensdk', version: '1.11.392'
 
+
+
+    compile ('io.socket:socket.io-client:1.0.0') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
